--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,22 @@
     <string name="min_temp">8 度</string>
     <string name="weather">Cloudy</string>
     <string name="action_refresh" translateable="false">Refresh</string>
+    <string name="title_activity_detail">Details</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_key">location</string>
+    <string name="pref_location_default">453800</string>
+    <string name="pref_unitsType_label">Temperature Units</string>
+    <string name="pref_unitsType_key">UnitsType</string>
+    <string name="pref_unitsType_default">metric</string>
+
+    <string-array name="pref_unitsType_entries">
+        <item>Metric</item>
+        <item>Imperial</item>
+    </string-array>
+
+    <string-array name="pref_unitsType_values">
+        <item>metric</item>
+        <item>imperial</item>
+    </string-array>
 </resources>
