--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,13 +13,22 @@
     <string name="pref_location_key">location</string>
     <string name="pref_location_default">453800</string>
     <string name="pref_unitsType_label">Temperature Units</string>
-    <string name="pref_unitsType_key">UnitsType</string>
+    <string name="pref_unitsType_key">Units</string>
     <string name="pref_unitsType_default">metric</string>
 
     <string name="action_map">Map Location</string>
     <string name="action_refresh" translateable="false">Refresh</string>
     <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
+
+    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
+    <string name="pref_units_key" translatable="false">units</string>
+
+    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
+    <string name="pref_units_metric" translatable="false">metric</string>
+
+    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
+    <string name="pref_units_imperial" translatable="false">imperial</string>
 
     <string-array name="pref_unitsType_entries">
         <item>Metric</item>
